--- a/package.json
+++ b/package.json
@@ -3,31 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
+    "@clerk/nextjs": "^6.24.0",
+    "@heroicons/react": "^2.2.0",
+    "@iconify/react": "^6.0.0",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
-    "prisma": "^6.11.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "postcss": "^8.5.6",
+    "prisma": "^6.11.1",
     "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
