--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "googleapis": "^153.0.0",
     "graphql": "^16.11.0",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^15.4.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -49,7 +49,7 @@
     "react-use": "^17.6.0",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.5"
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
